fixed centering of elements, started on home page

--- a/aboutthecourse.html
+++ b/aboutthecourse.html
@@ -1,49 +1,49 @@
 <!doctype html>
 <html>
-   <head>
-     <title>Charisma Decal</title>
-     <link rel="stylesheet" type="text/css" href="assets/css/aboutthecourse.css">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-     <script type="text/javascript" src="assets/scripts/aboutthecourse.js"></script>
-     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-   </head>
-   <body>
-     <div class="navbar">
-       <div class="logo"><img src="assets/img/1.png"></div>
-       <div class="topnav">
-         <a href="#syllabus">Syllabus</a>
-         <a href="pastexperiences.html">Past Experiences</a>
-         <a href="aboutthecourse.html">About The Course</a>
-         <a href="coursematerial.html">Course Material</a>
-         <a href="index.html">Home</a>
-         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-           <i class="fa fa-bars"></i>
-         </a>
-       </div>
-     </div>
-     <div class="title">
-       <h1>About The Course</h1>
-       <div class="bar"><img src="assets/img/2.png"></div>
-     </div>
-     <div class="learn">
-       <h2>What You Will Learn</h2>
-       <div class="barr"><img src="assets/img/2.png"></div>
-       <p>This class delves into interpersonal relationships through the lens of the conversations that create them. We explore the secrets to meeting new people, strengthening close friendships, the nuances behind humor and flirting, the keys to conflict resolution and more, all taught by two of the best persuasive speakers in the country.</p>
-     </div>
-     <div class="why">
-       <h2>Why We Started This Decal</h2>
-       <div class="barrr"><img src="assets/img/2.png"></div>
-       <p>This class delves into interpersonal relationships through the lens of the conversations that create them. We explore the secrets to meeting new people, strengthening close friendships, the nuances behind humor and flirting, the keys to conflict resolution and more, all taught by two of the best persuasive speakers in the country.</p>
-     </div>
-     <div class="who">
-       <h2>Who Are We? </h2>
-       <div class="barrrr"><img src="assets/img/2.png"></div>
-       <div class="people">
-         <div class= "person1">
-           <div class="sanjeev"><img src="assets/img/3.png"></div>
-           <h3>Sanjeev Vinhod</h3>
-           <p>This class delves into interpersonal relationships through the lens of the conversations that create them. We explore the secrets to meeting new people, strengthening close friendships, the nuances behind humor and flirting, the keys to conflict resolution and more, all taught by two of the best persuasive speakers in the country.</p>
+  <head>
+    <title>Charisma Decal</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/aboutthecourse.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="assets/scripts/aboutthecourse.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  </head>
+  <body>
+    <div class="navbar">
+      <div class="logo"><img src="assets/img/1.png"></div>
+      <div class="topnav">
+        <a href="syllabus.html">Syllabus</a>
+        <a href="pastexperiences.html">Past Experiences</a>
+        <a class="current" href="aboutthecourse.html">About The Course</a>
+        <a href="coursematerial.html">Course Material</a>
+        <a href="index.html">Home</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+    </div>
+    <div class="title">
+      <h1>About The Course</h1>
+      <div class="bar"><img src="assets/img/2.png"></div>
+    </div>
+    <div class="learn">
+      <h2>What You Will Learn</h2>
+      <div class="barr"><img src="assets/img/2.png"></div>
+      <p>This class delves into interpersonal relationships through the lens of the conversations that create them. We explore the secrets to meeting new people, strengthening close friendships, the nuances behind humor and flirting, the keys to conflict resolution and more, all taught by two of the best persuasive speakers in the country.</p>
+    </div>
+    <div class="why">
+      <h2>Why We Started This Decal</h2>
+      <div class="barrr"><img src="assets/img/2.png"></div>
+      <p>This class delves into interpersonal relationships through the lens of the conversations that create them. We explore the secrets to meeting new people, strengthening close friendships, the nuances behind humor and flirting, the keys to conflict resolution and more, all taught by two of the best persuasive speakers in the country.</p>
+    </div>
+    <div class="who">
+      <h2>Who Are We? </h2>
+      <div class="barrrr"><img src="assets/img/2.png"></div>
+      <div class="people">
+        <div class= "person1">
+          <div class="sanjeev"><img src="assets/img/3.png"></div>
+          <h3>Sanjeev Vinhod</h3>
+          <p>This class delves into interpersonal relationships through the lens of the conversations that create them. We explore the secrets to meeting new people, strengthening close friendships, the nuances behind humor and flirting, the keys to conflict resolution and more, all taught by two of the best persuasive speakers in the country.</p>
         </div>
         <div class= "person2">
           <div class="aurum"><img src="assets/img/4.png"></div>
@@ -65,5 +65,5 @@
         </div>
         </div>
 
-   </body>
+  </body>
 </html>
