--- a/index.html
+++ b/index.html
@@ -1,27 +1,54 @@
 <!doctype html>
 <html>
-   <head>
-     <title>Charisma Decal</title>
-     <link rel="stylesheet" type="text/css" href="assets/css/home.css">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-     <script type="text/javascript" src="assets/scripts/home.js"></script>
-     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-   </head>
-   <body>
-     <div class="navbar">
-       <div class="logo"><img src="assets/img/1.png"></div>
-       <div class="topnav">
-         <a href="#syllabus">Syllabus</a>
-         <a href="pastexperiences.html">Past Experiences</a>
-         <a href="aboutthecourse.html">About The Course</a>
-         <a href="coursematerial.html">Course Material</a>
-         <a href="index.html">Home</a>
-         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-           <i class="fa fa-bars"></i>
-         </a>
-       </div>
-     </div>
-     <p>Home page under construction, Thank you for being patient!</p>
-   </body>
+  <head>
+    <title>Charisma Decal</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/aboutthecourse.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="assets/scripts/aboutthecourse.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  </head>
+  <body>
+    <div class="navbar">
+      <div class="logo"><img src="assets/img/1.png"></div>
+      <div class="topnav">
+        <a href="syllabus.html">Syllabus</a>
+        <a href="pastexperiences.html">Past Experiences</a>
+        <a href="aboutthecourse.html">About The Course</a>
+        <a href="coursematerial.html">Course Material</a>
+        <a class="current" href="index.html">Home</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+    </div>
+    <div class="title">
+      <h1>The Charisma Decal</h1>
+    </div>
+    <div class="learn">
+      <h2>About the Course</h2>
+      <div class="barr"><img src="assets/img/2.png"></div>
+    </div>
+    <div class="why">
+      <h2>Past Experiences</h2>
+      <div class="barrr"><img src="assets/img/2.png"></div>
+    </div>
+    <div class="who">
+      <h2>Course Material</h2>
+      <div class="barrr"><img src="assets/img/2.png"></div>
+    </div>
+    <div class= "footer">
+      <h4>Contact Us</h4>
+      <div class="contacts">
+      <div class="contact1">
+        <div class="email"><img src="assets/img/5.png"></div>
+        <p>sanjeev.s.vinodh@berkeley.edu</p>
+      </div>
+      <div class="contact2">
+        <div class="email"><img src="assets/img/5.png"></div>
+        <p>aurumkathuria@berkeley.edu</p>
+      </div>
+      </div>
+
+  </body>
 </html>
