--- a/pastexperiences.html
+++ b/pastexperiences.html
@@ -12,8 +12,8 @@
      <div class="navbar">
        <div class="logo"><img src="assets/img/1.png"></div>
        <div class="topnav">
-         <a href="#syllabus">Syllabus</a>
-         <a href="pastexperiences.html">Past Experiences</a>
+         <a href="syllabus.html">Syllabus</a>
+         <a class="current" href="pastexperiences.html">Past Experiences</a>
          <a href="aboutthecourse.html">About The Course</a>
          <a href="coursematerial.html">Course Material</a>
          <a href="index.html">Home</a>
