--- a/coursematerial.html
+++ b/coursematerial.html
@@ -12,10 +12,10 @@
      <div class="navbar">
        <div class="logo"><img src="assets/img/1.png"></div>
        <div class="topnav">
-         <a href="#syllabus">Syllabus</a>
+         <a href="syllabus.html">Syllabus</a>
          <a href="pastexperiences.html">Past Experiences</a>
          <a href="aboutthecourse.html">About The Course</a>
-         <a href="coursematerial.html">Course Material</a>
+         <a class="current" href="coursematerial.html">Course Material</a>
          <a href="index.html">Home</a>
          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
            <i class="fa fa-bars"></i>
